show tm move on item page, show mega evolution methods

--- a/templates/item_view.jinja2
+++ b/templates/item_view.jinja2
@@ -27,6 +27,12 @@
 		<th>Sell price</th>
 		<td>{{ item.sell_price }}</td>
 	</tr>
+	{% if item.move.id is not none %}
+	<tr>
+		<th>Move taught</th>
+		<td><a href="{{ url_base }}/move/{{ item.move.id }}.html">{{ item.move.name }}</a></td>
+	</tr>
+	{% endif %}
 </table>
 
 <section>
