--- a/templates/growth_rate_list.jinja2
+++ b/templates/growth_rate_list.jinja2
@@ -36,6 +36,8 @@ document.addEventListener('DOMContentLoaded', () => {
 <section>
 	<h1>Growth Rates</h1>
 
+	<p>A Pokémon's growth rate determines the amount of EXP required to reach each level.</p>
+
 	<section>
 		<h2>Comparative Graph</h2>
 
@@ -46,7 +48,7 @@ document.addEventListener('DOMContentLoaded', () => {
 		<section>
 			<h2 id="{{ growth_rate.id }}">{{ growth_rate.name }}</h2>
 
-			<p>Formula: \({{ growth_rate.latex_formula }}\)</p>
+			<p>Formula for EXP required, where \(\ell\) is the level: \[{{ growth_rate.latex_formula }}\]</p>
 
 			<form name="growth-rate-{{ growth_rate.id }}-calculator">
 				<fieldset>
