--- a/templates/pokemon_view.jinja2
+++ b/templates/pokemon_view.jinja2
@@ -101,7 +101,7 @@
 			<tr>
 				<th>Pokédex number</th>
 				<td>{{ '{:0>3}'.format(pokemon.number) }}</td>
-				<th>Gender Ratio</th>
+				<th>Gender ratio</th>
 				<td style="white-space: nowrap">{{ pokemon.male_frequency|gender_ratio }}</td>
 				<th>Growth rate</th>
 				<td><a href="{{ url_base }}/growth_rates.html#{{ pokemon.growth_rate.id }}">{{ pokemon.growth_rate.name }}</a></td>
