add move pp / precise times for morning/day/night encounters

--- a/templates/trainer_view.jinja2
+++ b/templates/trainer_view.jinja2
@@ -144,8 +144,15 @@
 					<b>Moves</b>
 					<table style="margin-left: 1em">
 						<tr>
+							<th scope="row">Name</th>
 						{% for move in pokemon.moves %}
 							<td><a href="{{ url_base }}/move/{{ move.id }}.html">{{ move.name }}</a></td>
+						{% endfor %}
+						</tr>
+						<tr>
+							<th scope="row">PP</th>
+						{% for move in pokemon.moves %}
+							<td>{{ move.pp }}</td>
 						{% endfor %}
 						</tr>
 					</table>
