--- a/templates/area_view.jinja2
+++ b/templates/area_view.jinja2
@@ -59,6 +59,19 @@
 	</table>
 
 	<section>
+		<h2>Tiles</h2>
+
+		<figure>
+		<a href="{{ url_base }}/img/area/{{ area.id }}.png"><img src="{{ url_base }}/img/area/{{ area.id }}.png" style="display: block; margin: 0 auto; max-height: 24em; max-width: 100%; overflow-y: auto"></a>
+		<figcaption style="font-size: small">
+			Click the image for a closer view.
+			<br>
+			There may be some imperfections, as I haven't yet figured out how render the <a href="https://rpgmaker.fandom.com/wiki/Auto-tile">autotiles</a> correctly.
+		</figcaption>
+		</figure>
+	</section>
+
+	<section>
 		<h2>Wild encounters</h2>
 
 		{% if area.encrates and area.encounters %}
