some stuff from ages ago, that i never committed

--- a/templates/pokemon_view.jinja2
+++ b/templates/pokemon_view.jinja2
@@ -394,6 +394,8 @@
 				          {% endif %}
 				        {% elif move.method == 'machine' %}
 				          TM/TMX
+			            {% elif move.method == 'egg' %}
+			              Egg Move
 				        {% elif move.method == 'tutor' %}
 				          Move Tutor
 				        {% endif %}
