couple of small fixes

--- a/templates/move_view.jinja2
+++ b/templates/move_view.jinja2
@@ -56,7 +56,7 @@
 	    </tr>
 	    {% for learner in move.learners %}
 	    <tr>
-	      <td><a href="{{ url_base }}/pokemon/{{ learner.name }}.html#{{ learner.form }}">{{ pokemon_form_name(learner.name, learner.form) }}</a></td>
+	      <td><a href="{{ url_base }}/pokemon/{{ learner.name|slug }}.html#{{ learner.form|slug }}">{{ pokemon_form_name(learner.name, learner.form) }}</a></td>
 	      <td>
 	        <ul>
 	        {% for method in learner.learn_methods %}
