make contact details clearer

--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -18,4 +18,7 @@
 		{% block content %}
 		{% endblock %}
 	</body>
+	<footer>
+		<p>For suggestions/corrections you can DM me on reddit at the username <a href="https://old.reddit.com/user/house_carpenter">house_carpenter</a>. Also see the <a href="{{ url_base }}/about.html">about page</a>.</p>
+	</footer>
 </html>
