--- a/templates/move_view.jinja2
+++ b/templates/move_view.jinja2
@@ -6,6 +6,11 @@
 {% endblock %}
 
 {% block content %}
+
+<div class="backlinks">
+	<a href="{{ url_base }}/moves.html">Move List</a>
+</div>
+
 <section>
 	<h1>{{ move.name }}</h1>
 
