encounters page, add event encounter info and correct dusk time

--- a/templates/area_view.jinja2
+++ b/templates/area_view.jinja2
@@ -99,7 +99,7 @@
 
 			<p>Given that an encounter has begun, the chance of encountering a given Pokémon with a given level can be read off from the table below. If a level range is given, each level within that range is equally likely.</p>
 
-			<p>For time-based encounters, morning is 6am to noon, day is noon to 8pm, night is 8pm to 6am, dusk is 6pm to 7pm.</p>
+			<p>For time-based encounters, morning is 6am to noon, day is noon to 8pm, night is 8pm to 6am, dusk is 5pm to 6pm.</p>
 
 			<table style="width: 70%; margin: auto">
 				<tr>
@@ -150,6 +150,7 @@
 				<th>Pokémon</th>
 				<th>Encounter type</th>
 				<th>Level</th>
+				<th>Other attributes of note</th>
 			</tr>
 			{% for encounter in area.special_encounters %}
 			<tr>
@@ -158,6 +159,47 @@
 				</a></td>
 				<td>{{ encounter.type }}</td>
 				<td>{{ encounter.level }}</td>
+				<td>
+					{% if encounter.ot is not none %}
+						<b><abbr title="Original Trainer">OT</abbr></b>: {{ encounter.ot }}
+						<br>
+						<b>Trainer ID</b>:
+						{% if encounter.trainer_id == '$RANDOM' %}
+							<abbr title="A random 32-bit integer distinct from the current player's trainer ID.">random</abbr>
+						{% else %}
+							{{ encounter.trainer_id }}
+						{% endif %}
+						<br>
+					{% endif %}
+					{% if encounter.moves %}
+						<b>Moves</b>:
+						{% for move in encounter.moves %}
+							<a href="{{ url_base }}/move/{{ move.id }}.html">{{ move.name }}</a>{% if not loop.last %},{% endif %}
+						{% endfor %}
+						<br>
+					{% endif %}
+					{% if encounter.gender %}
+						<b>Gender</b>: {{ encounter.gender }}<br>
+					{% endif %}
+					{% if encounter.ivs %}
+						<b>IVs</b>:
+						{% for iv in encounter.ivs %}
+							{{ iv.value }} in {{ iv.stat }}{% if not loop.last %},{% endif %}
+						{% endfor %}
+					{% endif %}
+					{% if encounter.hp %}
+						<b>HP</b>: {{ encounter.hp }}
+					{% endif %}
+					{% if encounter.held_item %}
+						<a href="{{ url_base }}/item/{{ encounter.held_item|slug }}.html">{{ encounter.held_item }}</a>
+					{% endif %}
+					{% if encounter.friendship %}
+						<b>Friendship</b>: {{ encounter.friendship }}
+					{% endif %}
+					{% if encounter.ability %}
+						<b>Ability</b>: {{ encounter.ability }}
+					{% endif %}
+				</td>
 			</tr>
 			{% endfor %}
 		</table>
