--- a/templates/area_view.jinja2
+++ b/templates/area_view.jinja2
@@ -197,7 +197,7 @@
 						<b>Friendship</b>: {{ encounter.friendship }}
 					{% endif %}
 					{% if encounter.ability %}
-						<b>Ability</b>: {{ encounter.ability }}
+						<div><b>Ability</b>: <a href="{{ url_base }}/ability/{{ encounter.ability|slug }}.html">{{ encounter.ability }}</a></div>
 					{% endif %}
 				</td>
 			</tr>
