various stuff, improving build process, encounter rate fixes

--- a/templates/area_view.jinja2
+++ b/templates/area_view.jinja2
@@ -124,7 +124,7 @@
 							</a>
 						{% endif %}
 					</td>
-					<td>{{ encounter.min_level }}{% if encounter.max_level != encounter.min_level %}&ndash;{{ encounter.max_level }}{% endif %}</td>
+					<td>{{ encounter.level_range|ranges_from_list }}</td>
 					<td>{{ encounter.rate|frac_mixed }} %</td>
 				</tr>
 				{% endfor %}
