--- a/templates/pokemon_view.jinja2
+++ b/templates/pokemon_view.jinja2
@@ -471,7 +471,7 @@
 					<td><a href="{{ url_base }}/area/{{ encounter.map_id }}.html">{{ encounter.map_id }}</a></td>
 					<td>{{ encounter.map_name }}</td>
 					<td>{{ encounter.method }}</td>
-					<td>{{ encounter.min_level }}{% if encounter.max_level != encounter.min_level %}&ndash;{{ encounter.max_level }}{% endif %}</td>
+					<td>{{ encounter.level_range|ranges_from_list }}
 					<td>{{ encounter.rate|frac_mixed }} %</td>
 				</tr>
 				{% endfor %}
