--- a/templates/area_view.jinja2
+++ b/templates/area_view.jinja2
@@ -107,6 +107,7 @@
 					<th>Pokémon</th>
 					<th>Level range</th>
 					<th>Rate</th>
+					<th>Moves</th>
 				</tr>
 				{% for encounter in area.encounters %}
 				<tr>
@@ -126,6 +127,7 @@
 					</td>
 					<td>{{ encounter.level_range|ranges_from_list }}</td>
 					<td>{{ encounter.rate|frac_mixed }} %</td>
+					<td>{{ encounter.movesets|movesets_from_list }}</td>
 				</tr>
 				{% endfor %}
 			</table>
