--- a/templates/pokemon_view.jinja2
+++ b/templates/pokemon_view.jinja2
@@ -576,6 +576,32 @@
 		</section>
 		{% endif %}
 
+		{#
+		<section>
+			<h3>Appearances in Trainer teams</h3>
+
+			<p><input type="checkbox" id="show-trainer-spoilers" value="1"> Show trainer names and Pokémon nicknames (these may constitute spoilers)</p>
+
+			{% for appearance in form.trainer_appearances %}
+				<div class="moveset">
+					<div class="trainer-spoiler">
+						<a href="{{ url_base }}/trainers/{{ appearance.trainer_name }}">{{ appearance.trainer_name }}</a></span>
+						&ndash;
+						"{{ appearance.nickname }}""
+					</div>
+					<div>Level {{ appearance.level }},
+					{% if appearance.gender is none %} random gender, {% else %} {{ appearance.gender }}, {% endif %}
+						{{ appearance.item }}
+						{{ appearance.friendship }}
+						{{ appearance.shiny }}
+					{% for ability in appearance.abilities %}{{ ability }}{% if not loop.last %}/{% endif %}{% endfor %}
+					{% appearance.nature %}
+					table for stats
+				</div>
+			{% endfor %}
+		</section>
+		#}
+
 		{% if len(pokemon.forms) > 1 %}
 		</section>
 		{% endif %}
