--- a/templates/area_view.jinja2
+++ b/templates/area_view.jinja2
@@ -101,7 +101,7 @@
 
 			<p>For time-based encounters, morning is 6am to noon, day is noon to 8pm, night is 8pm to 6am, dusk is 5pm to 6pm.</p>
 
-			<table style="width: 70%; margin: auto">
+			<table style="margin: auto">
 				<tr>
 					<th>Encounter method</th>
 					<th>Pokémon</th>
@@ -127,7 +127,7 @@
 					</td>
 					<td>{{ encounter.level_range|ranges_from_list }}</td>
 					<td>{{ encounter.rate|frac_mixed }} %</td>
-					<td>{{ encounter.movesets|movesets_from_list }}</td>
+					<td><small>{{ encounter.movesets|movesets_from_list }}</small></td>
 				</tr>
 				{% endfor %}
 			</table>
