--- a/templates/trainer_view.jinja2
+++ b/templates/trainer_view.jinja2
@@ -89,10 +89,7 @@
 							{% endif %}
 						</th>
 						<td colspan="3">
-						{% for ability in pokemon.abilities %}
-							<a href="{{ url_base }}/ability/{{ ability|slug }}.html">{{ ability }}</a>
-							{% if not loop.last %}, {% endif %}
-						{% endfor %}
+						{% for ability in pokemon.abilities %}<a href="{{ url_base }}/ability/{{ ability|slug }}.html">{{ ability }}</a>{% if not loop.last %}, {% endif %}{% endfor %}
 						{% if len(pokemon.abilities) > 1 %}
 						(<abbr title="The Pokémon will have one of these abilities randomly chosen for it at the start of the battle.">?</abbr>)
 						{% endif %}
