--- a/templates/statcalc.jinja2
+++ b/templates/statcalc.jinja2
@@ -135,7 +135,7 @@ input:invalid { background-color: #ff8888; }
     <input name="individual-ev-limit" type="checkbox" checked>
   </p>
   
-  <table class="stat-table">
+  <table class="calc-stat-table">
     <tr>
       <th></th>
       <th>Base</th>
